--- a/suse2013/common/l10n/fr.xml
+++ b/suse2013/common/l10n/fr.xml
@@ -74,7 +74,7 @@
       <l:template name="page.citation" text=" (p.&#160;%p)"/>
 
       <l:template name="intra-article" text="Article «&#160;%t&#160;»"/>
-      <l:template name="intra-book" text="Livre «&#160;%t&#160;»"/>
+      <l:template name="intra-book" text="Manuel «&#160;%t&#160;»"/>
       <l:template name="intra-chapter" text="Chapitre %n «&#160;%t&#160;»"/>
       <l:template name="intra-sect1" text="Section&#160;%n «&#160;%t&#160;»"/>
       <l:template name="intra-sect2" text="Section&#160;%n «&#160;%t&#160;»"/>
@@ -172,18 +172,18 @@
 
 
    <l:context name="datetime-full">
-      <l:template name="January" text="Janvier" lang="fr" />
-      <l:template name="February" text="F&#xe9;vrier" lang="fr" />
-      <l:template name="March" text="Mars" lang="fr" />
-      <l:template name="April" text="Avril" lang="fr" />
-      <l:template name="May" text="Mai" lang="fr" />
-      <l:template name="June" text="Juin" lang="fr" />
-      <l:template name="July" text="Juillet" lang="fr" />
-      <l:template name="August" text="Aout" lang="fr" />
-      <l:template name="September" text="Septembre" lang="fr" />
-      <l:template name="October" text="Octobre" lang="fr" />
-      <l:template name="November" text="Novembre" lang="fr" />
-      <l:template name="December" text="D&#xe9;cembre" lang="fr" />
+      <l:template name="January" text="janvier" lang="fr" />
+      <l:template name="February" text="f&#xe9;vrier" lang="fr" />
+      <l:template name="March" text="mars" lang="fr" />
+      <l:template name="April" text="avril" lang="fr" />
+      <l:template name="May" text="mai" lang="fr" />
+      <l:template name="June" text="juin" lang="fr" />
+      <l:template name="July" text="juillet" lang="fr" />
+      <l:template name="August" text="aout" lang="fr" />
+      <l:template name="September" text="septembre" lang="fr" />
+      <l:template name="October" text="octobre" lang="fr" />
+      <l:template name="November" text="novembre" lang="fr" />
+      <l:template name="December" text="d&#xe9;cembre" lang="fr" />
    </l:context>
 
    <l:context name="parameters">
