--- a/suse2013/common/l10n/ja.xml
+++ b/suse2013/common/l10n/ja.xml
@@ -63,7 +63,7 @@
     <l:template name="page.citation" text=" (%p&#160;&#12506;&#12540;&#12472;)"/>
 
     <l:template name="intra-article" text="項目 「%t」"/>
-    <l:template name="intra-book" text="ブック 「%t」"/>
+    <l:template name="intra-book" text="ブック 『%t』"/>
     <l:template name="intra-chapter" text="章 %n 「%t」"/>
     <l:template name="intra-sect1" text="項&#160;%n 「%t」"/>
     <l:template name="intra-sect2" text="項&#160;%n 「%t」"/>
