--- a/suse2013/common/l10n/zh_tw.xml
+++ b/suse2013/common/l10n/zh_tw.xml
@@ -179,7 +179,7 @@
      -->
     <l:template name="intra-article" text="《%t》文章"/>
     <l:template name="intra-book" text="《%t》"/>
-    <l:template name="intra-chapter" text="章 %n 章「%t」"/>
+    <l:template name="intra-chapter" text="第 %n 章「%t」"/>
     <l:template name="intra-sect1" text="第 %n 節「%t」"/>
     <l:template name="intra-sect2" text="第 %n 節「%t」"/>
     <l:template name="intra-sect3" text="第 %n 節「%t」"/>
@@ -199,6 +199,11 @@
    <l:context name="xref-number">
       <l:template name="part" text="&#31532; %n &#37096;&#20998;"/>
       <l:template name="chapter" text="&#31532; %n &#31456;"/>
+      <l:template name="sect1" text="第 %n 節"/>
+      <l:template name="sect2" text="第 %n 節"/>
+      <l:template name="sect3" text="第 %n 節"/>
+      <l:template name="sect4" text="第 %n 節"/>
+      <l:template name="sect5" text="第 %n 節"/>
    </l:context>
 
    <l:context name="xref-number-and-title">
