work in progress
Building with FOP doesn't work, only with xep yet

--- a/suse2013/common/l10n/es.xml
+++ b/suse2013/common/l10n/es.xml
@@ -48,6 +48,8 @@
    <l:gentext key="version" text="Versión"/>
    <l:gentext key="Version" text="Versión"/>
 
+   <l:gentext key="step.optional" text=" (Opcional)"/>
+
    <l:gentext key="part" text="Parte"/>
 
    <l:context name="styles">
