--- a/suse2013/common/l10n/de.xml
+++ b/suse2013/common/l10n/de.xml
@@ -40,6 +40,7 @@
 
    <l:gentext key="version" text="Version"/>
    <l:gentext key="Version" text="Version"/>
+   <l:gentext key="step.optional" text=" (Optional)"/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
