--- a/suse2013/common/l10n/it.xml
+++ b/suse2013/common/l10n/it.xml
@@ -45,6 +45,8 @@
    <l:gentext key="version" text="Versione"/>
    <l:gentext key="Version" text="Versione"/>
 
+   <l:gentext key="step.optional" text=" (Opzionale)"/>
+    
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
