--- a/suse2013/common/l10n/ru.xml
+++ b/suse2013/common/l10n/ru.xml
@@ -45,6 +45,8 @@
    <l:gentext key="version" text="Ве́рсия"/>
    <l:gentext key="Version" text="Ве́рсия"/>
 
+   <l:gentext key="step.optional" text=" (Необязательно)"/>
+
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
