--- a/suse2013/common/l10n/da.xml
+++ b/suse2013/common/l10n/da.xml
@@ -48,6 +48,8 @@
    <l:gentext key="version.info" text="Gælder for "/>
    <l:gentext key="totopofpage" text="Top"/>
 
+   <l:gentext key="step.optional" text="(Valgfit)"/>
+
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
