--- a/suse2013/common/l10n/en.xml
+++ b/suse2013/common/l10n/en.xml
@@ -42,6 +42,8 @@
    <l:gentext key="version" text="Version"/>
    <l:gentext key="Version" text="Version"/>
 
+   <l:gentext key="step.optional" text="(Optional)"/>
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
