Improve README file with instructions for running the tests

--- a/README.adoc
+++ b/README.adoc
@@ -8,8 +8,8 @@ Thomas Schraitle <toms@opensuse.org>
 This project contains customization layers for the DocBook XSL stylesheets.
 
 
-Requirements for Building the Stylesheets
------------------------------------------
+Requirements for Building
+-------------------------
 
 These stylesheets can be used as-is for DocBook 4 content.
 To use them with DocBook 5 content, build them with `make`.
@@ -21,17 +21,38 @@ For a successful build, you will need:
 * `xmlcatalog`
 * `aspell`
 
-
-Requirements for Testing the Stylesheets
-----------------------------------------
-
-* `dapscompare` from Documentation:Tools
-
-
-Requirements for Using the Stylesheets
---------------------------------------
+Requirements for Use
+--------------------
 
 * DAPS from https://github.com/openSUSE/daps
 * DocBook XSL stylesheets from https://sourceforge.net/projects/docbook/
 * XSLT processor like `xsltproc` or Saxon 6 (needs to have support for exslt)
 * Python 3
+
+Requirements for Testing
+------------------------
+
+* `dapscompare` from Documentation:Tools
+
+Running the Tests
+-----------------
+
+The current tests are not run automatically and need some manual intervention
+for use. They are based upon creating reference images of test documents,
+making a code change and then creating updated images of the test documents.
+Then, you can compare the updated images to the reference images.
+
+On the command line, this works out to the following:
+
+1. In the first invocation, run `./run_dapscompare.sh reference` (from the
+   `tests/` directory). This will create reference images, that is the baseline
+   from which you can judge if what you did was correct or not).
+2. Do the stylesheet changes.
+3. Now run `./run_dapscompare.sh` (without any arguments) again. This will
+   create the comparison images. If there are changes between reference and
+   comparison images, those will be shown to you in a GUI.
+
+The reference images are currently not stored centrally: They differ
+somewhat depending on, for example, font rendering settings between different
+computers.
+
