Fix zh_* comma usage in authorgroup

--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -42,10 +42,13 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
 
+   <!-- Not quite sure why we need this: most of our other l10n files do not
+   override the authorgroup context, only the zh_*.xml files do. However, we do
+   remove the "and" (和) character. Maybe this was a translator request once. -->
    <l:context name="authorgroup">
-       <l:template name="sep" text=", "/>
-       <l:template name="sep2" text=", "/>
-       <l:template name="seplast" text=", "/>
+       <l:template name="sep" text="、"/>
+       <l:template name="sep2" text="、"/>
+       <l:template name="seplast" text="、"/>
    </l:context>
 
    <l:context name="styles">
