Fix up zh_TW translation of procedure, & remove superfluous commas
Note that this change also entails some conversions from
decimal XML entities to UTF-8 characters. That arguably makes the
changes a bit more oblique than necessary but was done with good
intentions.
Only the procedure translations have actually been changed.

--- a/suse2013/common/l10n/zh_tw.xml
+++ b/suse2013/common/l10n/zh_tw.xml
@@ -31,6 +31,13 @@
    <l:gentext key="showcontentsoverview" text="顯示內容"/>
    <l:gentext key="find" text="尋找"/>
 
+   <!-- Submitted upstream with: https://github.com/docbook/xslt10-stylesheets/pull/23 (Jan 2017) -->
+   <gentext key="Procedure" text="程序"/>
+   <gentext key="procedure" text="程序"/>
+   <gentext key="ListofProcedures" text="程序清單"/>
+   <gentext key="listofprocedures" text="程序清單"/>
+   <!-- End of stuff submitted via PR -->
+
    <l:gentext key="runinhead.default.title.end.punct" text="&#xff1a;"/>
 
    <l:gentext key="navigation" text="導覽"/>
@@ -188,7 +195,7 @@
     <l:template name="intra-example" text="範例 %n 「%t」"/>
     <l:template name="intra-figure" text="圖形 %n 「%t」"/>
     <l:template name="intra-preface" text="序言 「%t」"/>
-    <l:template name="intra-procedure" text="過程 %n 「%t」"/>
+    <l:template name="intra-procedure" text="程序 %n 「%t」"/>
     <l:template name="intra-table" text="表格 %n 「%t」"/>
 
     <l:template name="intra-variablelist" text="「%t」"/>
@@ -206,21 +213,33 @@
       <l:template name="sect5" text="第 %n 節"/>
    </l:context>
 
+   <!-- Submitted upstream with: https://github.com/docbook/xslt10-stylesheets/pull/23 (Jan 2017) -->
    <l:context name="xref-number-and-title">
-	<l:template name="appendix" text="&#38468;&#37636; %n 「%t」"/>
-	<l:template name="chapter" text="&#31532; %n &#31456; 「%t」"/>
-	<l:template name="example" text="&#31684;&#20363; %n 「%t」"/>
-	<l:template name="figure" text="&#22294;&#24418; %n 「%t」"/>
-	<l:template name="part" text="&#31532; %n &#37096;&#20998; 「%t」"/>
-	<l:template name="sect1" text="&#31532; %n &#31680; 「%t」"/>
-	<l:template name="sect2" text="&#31532; %n &#31680; 「%t」"/>
-	<l:template name="sect3" text="&#31532; %n &#31680; 「%t」"/>
-	<l:template name="sect4" text="&#31532; %n &#31680; 「%t」"/>
-	<l:template name="sect5" text="&#31532; %n &#31680; 「%t」"/>
-	<l:template name="section" text="&#31532; %n &#31680; 「%t」"/>
-	<l:template name="table" text="&#34920;&#26684; %n 「%t」"/>
-        <l:template name="procedure" text="&#31243;&#24207;&#x00A0;%n, 「%t」"/>
+     <l:template name="appendix" text="附錄 %n 「%t」"/>
+     <l:template name="bridgehead" text="節 %n 「%t」"/>
+     <l:template name="chapter" text="第 %n 章 「%t」"/>
+     <l:template name="equation" text="公式 %n 「%t」"/>
+     <l:template name="example" text="範例 %n 「%t」"/>
+     <l:template name="figure" text="圖形 %n 「%t」"/>
+     <l:template name="part" text="第 %n 部分 「%t」"/>
+     <l:template name="procedure" text="程序 %n 「%t」"/>
+     <l:template name="productionset" text="奉獻 %n 「%t」"/>
+     <l:template name="qandadiv" text="問答 %n 「%t」"/>
+     <l:template name="refsect1" text="一節 「%t」"/>
+     <l:template name="refsect2" text="一節 「%t」"/>
+     <l:template name="refsect3" text="一節 「%t」"/>
+     <l:template name="refsection" text="一節 「%t」"/>
+     <l:template name="sect1" text="第 %n 節 「%t」"/>
+     <l:template name="sect2" text="第 %n 節 「%t」"/>
+     <l:template name="sect3" text="第 %n 節 「%t」"/>
+     <l:template name="sect4" text="第 %n 節 「%t」"/>
+     <l:template name="sect5" text="第 %n 節 「%t」"/>
+     <l:template name="section" text="第 %n 節 「%t」"/>
+     <l:template name="simplesect" text="一節 「%t」"/>
+     <l:template name="table" text="表格 %n 「%t」"/>
    </l:context>
+   <!-- End of stuff submitted via PR -->
+
 
    <l:context name="parameters">
      <l:template name="dot.after.section" text=""/>
