--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -16,7 +16,7 @@
    <l:gentext key="formathtml" text="网页"/>
    <l:gentext key="formatsinglehtml" text="单一网页"/>
    <l:gentext key="formatpdf" text="PDF"/>
-   <l:gentext key="formatepub" text="E-bok (EPUB)"/>
+   <l:gentext key="formatepub" text="E-book (EPUB)"/> <!-- According to Google Translate, this should be: 电子书（EPUB） -->
    <l:gentext key="contentsoverview" text="内容"/>
    <l:gentext key="showcontentsoverview" text="显示内容"/>
    <l:gentext key="find" text="查找"/>
