First draft of task in FO
TODO:
* spaces between the (automated) title taskprerequisites and taskrelated
  needs to be adapted

--- a/suse2013/common/l10n/en.xml
+++ b/suse2013/common/l10n/en.xml
@@ -48,6 +48,7 @@
 
    <l:gentext key="tasksummary" text="Summary"/>
    <l:gentext key="taskprerequisites" text="Requirements"/>
+   <l:gentext key="taskrelated" text="Related"/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
