--- a/suse2013/common/l10n/sv.xml
+++ b/suse2013/common/l10n/sv.xml
@@ -49,13 +49,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="Exempel&#160;%n"/>
+      <l:template name="example-label" text="Exempel&#160;%n:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="Figur&#160;%n"/>
+      <l:template name="figure-label" text="Figur&#160;%n:"/>
       <l:template name="figure-title" text="%t"/>
-      <l:template name="procedure-label" text="G&#246;r s&#229; h&#228;r&#160;%n"/>
+      <l:template name="procedure-label" text="G&#246;r s&#229; h&#228;r&#160;%n:"/>
       <l:template name="procedure-title" text="%t"/>
-      <l:template name="table-label" text="Tabell&#160;%n"/>
+      <l:template name="table-label" text="Tabell&#160;%n:"/>
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
