--- a/suse2013/common/l10n/cs.xml
+++ b/suse2013/common/l10n/cs.xml
@@ -43,13 +43,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="P&#345;&#237;klad&#160;%n"/>
+      <l:template name="example-label" text="P&#345;&#237;klad&#160;%n:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="Obr&#225;zek&#160;%n"/>
+      <l:template name="figure-label" text="Obr&#225;zek&#160;%n:"/>
       <l:template name="figure-title" text="%t"/>
-      <l:template name="procedure-label" text="Postup&#160;%n"/>
+      <l:template name="procedure-label" text="Postup&#160;%n:"/>
       <l:template name="procedure-title" text="%t"/>
-      <l:template name="table-label" text="Tabulka&#160;%n"/>
+      <l:template name="table-label" text="Tabulka&#160;%n:"/>
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
