--- a/suse2013/common/l10n/de.xml
+++ b/suse2013/common/l10n/de.xml
@@ -52,13 +52,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="Beispiel %n"/>
+      <l:template name="example-label" text="Beispiel %n:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="Abbildung %n"/>
+      <l:template name="figure-label" text="Abbildung %n:"/>
       <l:template name="figure-title" text="%t"/>
-      <l:template name="procedure-label" text="Prozedur %n"/>
+      <l:template name="procedure-label" text="Prozedur %n:"/>
       <l:template name="procedure-title" text="%t"/>
-      <l:template name="table-label" text="Tabelle %n"/>
+      <l:template name="table-label" text="Tabelle %n:"/>
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
