--- a/suse2013/common/l10n/es.xml
+++ b/suse2013/common/l10n/es.xml
@@ -55,13 +55,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="Ejemplo %n"/>
+      <l:template name="example-label" text="Ejemplo %n:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="Figura %n"/>
+      <l:template name="figure-label" text="Figura %n:"/>
       <l:template name="figure-title" text="%t"/>
-      <l:template name="procedure-label" text="Procedimiento %n"/>
+      <l:template name="procedure-label" text="Procedimiento %n:"/>
       <l:template name="procedure-title" text="%t"/>
-      <l:template name="table-label" text="Tabla %n"/>
+      <l:template name="table-label" text="Tabla %n:"/>
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
