--- a/suse2013/common/l10n/hu.xml
+++ b/suse2013/common/l10n/hu.xml
@@ -51,13 +51,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="%n.&#160;p&#233;lda"/>
+      <l:template name="example-label" text="%n.&#160;p&#233;lda:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="%n.&#160;&#225;bra"/>
+      <l:template name="figure-label" text="%n.&#160;&#225;bra:"/>
       <l:template name="figure-title" text="%t"/>
-      <l:template name="procedure-label" text="%n.&#160;elj&#225;r&#225;s"/>
+      <l:template name="procedure-label" text="%n.&#160;elj&#225;r&#225;s:"/>
       <l:template name="procedure-title" text="%t"/>
-      <l:template name="table-label" text="%n.&#160;t&#225;bl&#225;zat"/>
+      <l:template name="table-label" text="%n.&#160;t&#225;bl&#225;zat:"/>
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
