--- a/suse2013/common/l10n/ru.xml
+++ b/suse2013/common/l10n/ru.xml
@@ -50,13 +50,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="Пример %n"/>
+      <l:template name="example-label" text="Пример %n:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="Рисунок %n"/>
+      <l:template name="figure-label" text="Рисунок %n:"/>
       <l:template name="figure-title" text="%t"/>
-      <l:template name="procedure-label" text="Процедура %n"/>
+      <l:template name="procedure-label" text="Процедура %n:"/>
       <l:template name="procedure-title" text="%t"/>
-      <l:template name="table-label" text="Таблица %n"/>
+      <l:template name="table-label" text="Таблица %n:"/>
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
