Fix #323: don't generate "book" in intra-xrefs for
* Japanese prefer not to have the word "book" in intra-xrefs
* Introduce generate.intra.separator
* Comma (or better a "separator") is now created by using:
  <xsl:call-template name="generate.intra.separator">
     <xsl:with-param name="lang" select="$lang"/>
  </xsl:call-template>
* Replace all occurances of ", " with the above named template
* Introduce intra-separator in language files

--- a/suse2013/common/l10n/de.xml
+++ b/suse2013/common/l10n/de.xml
@@ -71,6 +71,7 @@
    <l:context name="xref">
       <l:template name="page.citation" text=" (S.&#160;%p)"/>
 
+      <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Artikel „%t”"/>
       <l:template name="intra-book" text="Buch „%t”"/>
       <l:template name="intra-chapter" text="Kapitel %n „%t”"/>
