--- a/suse2013/common/l10n/ar.xml
+++ b/suse2013/common/l10n/ar.xml
@@ -57,7 +57,7 @@ translators apparently want those. - sknorr, 2016-09-30 -->
            It seems "ال" == "the", but I still was not sure whether to add this
            everywhere. I just took the translations from the DocBook
            stylesheets. Expect issues to crop up. -->
-
+      <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text='مقال "%t"'/>
       <l:template name="intra-book" text='كتاب "%t"'/>
       <l:template name="intra-chapter" text='فصل&#160;%n "%t"'/>
