--- a/suse2013/common/l10n/cs.xml
+++ b/suse2013/common/l10n/cs.xml
@@ -67,6 +67,7 @@
       <l:template name="sect5" text="&#268;&#225;st &#8222;%t&#8220;"/>
       <l:template name="page.citation" text=" (strana&#160;%p)"/>
 
+      <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Článek „%t”"/>
       <l:template name="intra-book" text="Kniha „%t”"/>
       <l:template name="intra-chapter" text="Kapitola&#160;%n „%t”"/>
