--- a/suse2013/common/l10n/da.xml
+++ b/suse2013/common/l10n/da.xml
@@ -77,6 +77,7 @@
       <l:template name="sect5" text="Afsnit &#34;%t&#34;"/>
       <l:template name="page.citation" text=" (side&#160;%p)"/>
 
+      <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Artikel “%t” "/>
       <l:template name="intra-book" text="Bog “%t” "/>
       <l:template name="intra-chapter" text="Kapitel&#160;%n “%t”"/>
