--- a/suse2013/common/l10n/no.xml
+++ b/suse2013/common/l10n/no.xml
@@ -69,6 +69,7 @@
       <l:template name="sect5" text="Del «%t»"/>
       <l:template name="page.citation" text=" (side&#160;%p)"/>
 
+      <l:template name="intra-separator" text=", "/>
       <l:template name="intra-article" text="Artikkel «%t»"/>
       <l:template name="intra-book" text="Bok «%t» "/>
       <l:template name="intra-chapter" text="Kapittel&#160;%n «%t»"/>
