Fix #330: See Also -> See also (for glossseealso)

--- a/suse2013/common/l10n/en.xml
+++ b/suse2013/common/l10n/en.xml
@@ -43,10 +43,17 @@
    <l:gentext key="Version" text="Version"/>
 
    <l:gentext key="step.optional" text="(Optional)"/>
+   <l:gentext key="GlossSeeAlso" text="See also"/>
+   <l:gentext key="glossseealso" text="See also"/>
+
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
+
+   <l:context name="glossary">
+     <l:template name="seealso" text="See also %t."/>
+   </l:context>
 
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
